--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<ul>
 					<li>
 						<a href="#"> Каталог </a>
-						<ul class="sub-menu visually-hidden">
+						<ul class="sub-menu visually-hid55555den">
 							<li><a class="sub-new" href="#"> Новинки </a></li>
 							<li><a href="catalog.html"> Сливочное </a></li>
 							<li><a href="#"> Щербеты </a></li>
@@ -47,7 +47,7 @@
 						<a href="#"> Забыли пароль? </a>
 						<a href="#"> Новая регистрация </a>
 					</form>
-					<a class="login" href="#"> 
+					<a class="user-basket" href="#"> 
 						Пусто
 					</a>
 				</div>
