--- a/index.html
+++ b/index.html
@@ -239,5 +239,29 @@
 			</div>
 		</footer>
 
+
+				<div class="user-authorization22">
+					<section class="modal modal-login">
+						<form action="https://echo.htmlacademy.ru" method="post" class="login-form visually-hid123den">
+							<p>
+								<label for="email" class="visually-hidden">Электронная почта</label>
+								<input id="email" type="email" name="email" placeholder="Электронная почта">
+							</p>
+							<p>
+								<label for="password" class="visually-hidden">Пароль</label>
+								<input id="password" type="password" name="password" placeholder="Пароль">
+							</p>
+								<input type="submit" value="Войти" name="autorization">
+								<!-- <button class="button" type="submit">Войти</button> -->
+								
+							<a href="#"> Забыли пароль? </a>
+							<a href="#"> Новая регистрация </a>
+						</form>
+					</section>
+				</div>
+				
+			<br><br><br>
+		
+		
 	</body>
 </html>
