--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
 	</header>
 
 	<main class="container">
-		<ul class="breadcrumbs">
+		<ul class="breadcrumbs reset-list">
 			<li>
 				<a href="index.html"> Главная </a>
 			</li>
