--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 				<img src="img/logo.svg" alt="GllacyShop" title="GllacyShop" width="154" height="64">
 			</div>
 			<nav class="main-menu">
-				<ul>
-					<li>
+				<ul class="reset-list">
+					<li class="main-item">
 						<a href="#"> Каталог </a>
-						<ul class="sub-menu visually-hidden123">
+						<ul class="sub-menu visually-hidden123 reset-list">
 							<li><a class="sub-new" href="#"> Новинки </a></li>
 							<li><a href="catalog.html"> Сливочное </a></li>
 							<li><a href="#"> Щербеты </a></li>
@@ -24,10 +24,10 @@
 							<li><a href="#"> Мелорин </a></li>
 						</ul>
 					</li>
-					<li>
+					<li class="main-item">
 						<a href="#"> Доставка и оплата </a>
 					</li>
-					<li> 
+					<li class="main-item"> 
 						<a href="#"> О Компании </a>
 					</li>
 				</ul>	
@@ -155,7 +155,7 @@
 			</div>
 			<div class="features-block container">
 				<p> Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес </p>
-				<ul class="features-list">
+				<ul class="features-list reset-list">
 					<li> Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий. </li>
 					<li> Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество. </li>
 					<li> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </li>
@@ -194,7 +194,7 @@
 		
 		<footer class="container">
 			<div class="footer-social">
-				<ul>
+				<ul class="reset-list">
 					<li>
 						<a href="#">
 							<img src="img/twitter.svg" width="38" height="38" alt="twitter"> 
@@ -218,7 +218,7 @@
 				</ul>
 			</div>
 			<div class="footer-info">
-				<ul class="info-part">
+				<ul class="info-part reset-list">
 					<li>
 						<a href="#"> Для поставщиков </a>
 					</li>
