--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 				</ul>	
 			</nav>
 			<div class="user-block">
-				<div class="user-authorization">
+				<div class="user-data">
+					<a href="#search-form">
+						<span class="visually-hidden">Поиск по сайту</span>
+					</a>
 					<form action="?" method="get" class="visually-hidden123">
 						<input type="text" name="search" placeholder="Что ищем?">
 					</form>
