--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
 								<label for="password" class="visually-hidden">Пароль</label>
 								<input id="password" type="password" name="password" placeholder="Пароль">
 							</p>
+							<div class="modal-autorization">
 								<input type="submit" value="Войти" name="autorization">
-							<a href="#"> Забыли пароль? </a>
-							<a href="#"> Новая регистрация </a>
+								<div>
+									<a href="#"> Забыли пароль? </a>
+									<a href="#"> Новая регистрация </a>
+								</div>
+							</div>
 						</form>
 					</section>
 					<a class="user-basket" href="#"> 
