--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 					<input type="email" name="email" placeholder="Ваша почта для ответа?">
 					<textarea id="comment-field" name="comment" rows="5" cols="45" placeholder="Напишите что-нибудь..."></textarea> 
 					<input type="submit" name="feedback" value="Отправить">	
-					<button class="map-close" type="button">Закрыть</button>
+					<button class="map-close map-close2" type="button">Закрыть</button>
 				</form>	
 			</div>
 		</main> 
