--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li><a href="catalog.html"> Сливочное </a></li>
 							<li><a href="#"> Щербеты </a></li>
 							<li><a href="#"> Фруктовый лед </a></li>
-							<li><a href="#"> Мелорин </a></li>
+							<li><a class="sub-melorin" href="#"> Мелорин </a></li>
 						</ul>
 					</li>
 					<li class="main-item">
@@ -233,7 +233,7 @@
 			<div class="footer-info">
 				<ul class="info-part reset-list">
 					<li>
-						<a href="#"> Для поставщиков </a>
+						<a class="heart" href="#"> Для поставщиков </a>
 					</li>
 					<li>
 						<a href="#"> Наши документы </a>
