--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
 		<main>
 			<div class="sliders container">
-				<a href="#">
+<!-- 				<a href="#">
 					<img class="slide-img" src="img/ice_cream_bar.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом" title="Мороженое крем-брюле">
-				</a>
+				</a>	 -->
 			  <input type="radio" id="btn-1" name="toggle" checked>
 			  <input type="radio" id="btn-2" name="toggle">
 			  <input type="radio" id="btn-3" name="toggle">
