--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title> Глейси - Главная страница </title>
+		<title> Магазин мороженого «Глейси» - Главная страница </title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -47,7 +47,7 @@
 						</svg>
 						Вход 
 					</a>
-					<section class="popup visually-hidden">
+					<section class="popup-login-form visually-hidden">
 						<form action="https://echo.htmlacademy.ru" method="post" class="popup-login">
 							<p>
 								<label for="email" class="visually-hidden">Электронная почта</label>
@@ -79,29 +79,67 @@
 			</div>
 		</header>
 		<main>
-			<div class="sliders container">
-			  <input type="radio" id="btn-1" name="toggle" checked>
-			  <input type="radio" id="btn-2" name="toggle">
-			  <input type="radio" id="btn-3" name="toggle">
-			  <div class="site-wrapper">
-				<div class="content-wrapper">
-				  <div class="slider">
-					<div class="slide" id="slide1">
-					  <div class="slide-title"> Крем-брюле и пломбир с малиновым джемом </div>
-					  <a class="slide-btn" href="#"> Давайте оба! </a>
-					</div>
-					<div class="slide" id="slide2">
-					  <div class="slide-title"> Шоколадный пломбир и лимонный сорбет </div>
-					  <a class="slide-btn" href="#"> Давайте оба! </a>
-					</div>
-					<div class="slide" id="slide3">
-					  <div class="slide-title"> Пломбир с помадкой и клубничный щербет </div>
-					  <a class="slide-btn" href="#"> Давайте оба! </a>
-					</div>
-				   </div>
+			<h1 class="visually-hidden"> Магазин мороженого «Глейси» </h1>
+			
+			<input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+			<input class="visually-hidden" type="radio" id="product-2" name="toggle">
+			<input class="visually-hidden" type="radio" id="product-3" name="toggle">
+			<div class="site-wrapper">
+				<div class="container">
+					<section class="slider">
+						<div class="slider-controls">
+							<label for="product-1"> Первый </label>
+							<label for="product-2"> Второй </label>
+							<label for="product-3"> Третий </label>
+						</div>
+						<ul class="slider-list">
+							<h2 class="visually-hidden"> Специальные предложения </h2>
+							<li class="slider-item slide" id="slide1">
+								<h3 class="slide-title">
+									Крем-брюле и пломбир с малиновым джемом
+								</h3>
+								<a class="button-slider" href="#"> Давайте оба! </a>
+							</li>
+							<li class="slider-item slide" id="slide2">
+								<h3 class="slide-title">
+									Шоколадный пломбир и лимонный сорбет
+								</h3>
+								<a class="button-slider" href="#"> Давайте оба! </a>
+							</li>
+							<li class="slider-item slide" id="slide3">
+								<h3 class="slide-title">
+									Пломбир с помадкой и клубничный щербет
+								</h3>
+								<a class="button-slider" href="#"> Давайте оба! </a>
+							</li>
+						</ul>
+					</section>
 				</div>
-			  </div>
 			</div>
+
+			<!-- <div class="sliders container"> -->
+			  <!-- <input type="radio" id="btn-1" name="toggle" checked> -->
+			  <!-- <input type="radio" id="btn-2" name="toggle"> -->
+			  <!-- <input type="radio" id="btn-3" name="toggle"> -->
+			  <!-- <div class="site-wrapper"> -->
+				<!-- <div class="content-wrapper"> -->
+				  <!-- <div class="slider"> -->
+					<!-- <div class="slide" id="slide1"> -->
+					  <!-- <div class="slide-title"> Крем-брюле и пломбир с малиновым джемом </div> -->
+					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
+					<!-- </div> -->
+					<!-- <div class="slide" id="slide2"> -->
+					  <!-- <div class="slide-title"> Шоколадный пломбир и лимонный сорбет </div> -->
+					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
+					<!-- </div> -->
+					<!-- <div class="slide" id="slide3"> -->
+					  <!-- <div class="slide-title"> Пломбир с помадкой и клубничный щербет </div> -->
+					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
+					<!-- </div> -->
+				   <!-- </div> -->
+				<!-- </div> -->
+			  <!-- </div> -->
+			<!-- </div> -->
 			<div class="select container"> 
 				<div class="sel-raspberry">
 					<p> Малинка даром! </p>
@@ -126,7 +164,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой </a>
 					</h2>
-					<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -139,7 +177,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-кофейное с кусочками шоколада </a>
 					</h2>
-					<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -152,7 +190,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-клубничное с присыпкой из белого шоколада </a>
 					</h2>
-					<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -165,7 +203,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочное крем-брюле с карамельной подливкой </a>
 					</h2>
-					<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+					<a href="#" class="price-button"> Быстрый просмотр </a>
 				</article>
 			</div>
 			<div class="features-block container">
