--- a/catalog.html
+++ b/catalog.html
@@ -363,7 +363,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой </a>
 			</h2>
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -375,7 +375,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочно-кофейное с кусочками шоколада </a>
 			</h2>
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item"> 
 			<a href="#">
@@ -387,7 +387,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочно-клубничное с присыпкой из белого шоколада </a>
 			</h2>
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item"> 
 			<a href="#">
@@ -399,7 +399,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочное крем-брюле с карамельной подливкой </a>
 			</h2>
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -411,7 +411,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочное с брусничным джемом </a> 
 			</h2>
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -423,7 +423,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочно-черничное с цельными ягодами черники </a>
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -435,7 +435,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочно-лимонное с карамельной присыпкой </a>
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -447,7 +447,7 @@
 			<h2 class="price-heading">
 				<a href="#"> Сливочное с шоколадной стружкой </a>
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -459,7 +459,7 @@
 			<h2 class="price-heading">	
 				<a href="#"> Сливочно-ванильное с кусочками шоколада </a> 
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -471,7 +471,7 @@
 			<h2 class="price-heading">				
 				<a href="#"> Сливочное с ментоловым сиропом </a> 
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -483,7 +483,7 @@
 			<h2 class="price-heading">			
 				<a href="#"> Сливочное с кусочками черного шоколада </a> 
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		<article class="price-item">
 			<a href="#">
@@ -495,7 +495,7 @@
 			<h2 class="price-heading">			
 				<a href="#"> Сливочное с мятным сиропом </a> 
 			</h2> 
-			<a href="#" class="price-button visually-hidden"> Быстрый просмотр </a>
+			<a href="#" class="price-button"> Быстрый просмотр </a>
 		</article>
 		
 		
