--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой </a>
 					</h2>
-					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
+					<a href="#" class="price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -177,7 +177,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-кофейное с кусочками шоколада </a>
 					</h2>
-					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
+					<a href="#" class="price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -190,7 +190,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-клубничное с присыпкой из белого шоколада </a>
 					</h2>
-					<a href="#" class="price-button visually-hi123dden"> Быстрый просмотр </a>
+					<a href="#" class="price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -224,12 +224,14 @@
 					</h3>
 				</div>
 				<div class="subscribe">
+				<div class="subscribe-container">
 					<p> Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
 						что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
 					<form action="https://echo.htmlacademy.ru" method="post">
 						<input type="email" name="e-mail" placeholder="Электронная почта"> 
 						<button> Отправить </button> 
 					</form>
+					</div>
 				</div>
 			</div>
 			<div class="map">
