--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Магазин мороженого «Глейси» - Главная страница </title>
+		<link rel="shortcut icon" href="icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -10,13 +11,13 @@
 	<body>
 		<header class="main-header container">
 			<div class="logo">
-				<img src="img/logo.svg" alt="GllacyShop" title="GllacyShop" width="154" height="64">
+				<img src="img/logo.svg" alt="GllacyShop" title="Магазин мороженого «Глейси»" width="154" height="64">
 			</div>
 			<nav class="main-menu">
 				<ul class="reset-list">
 					<li class="main-item">
 						<a href="#"> Каталог </a>
-						<ul class="sub-menu visually-hidden reset-list">
+						<ul class="sub-menu sub-hover reset-list">
 							<li><a class="sub-new" href="#"> Новинки </a></li>
 							<li><a href="catalog.html"> Сливочное </a></li>
 							<li><a href="#"> Щербеты </a></li>
@@ -39,7 +40,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17"><path d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/>
 						</svg>
 					</a>
-					<form action="?" method="get" class="popup-search visually-hidden">
+					<form action="?" method="get" class="popup-search">
 						<input type="text" name="search" placeholder="Что ищем?">
 					</form>
 					<a class="login" href="#">
@@ -58,7 +59,7 @@
 								<input id="password" type="password" name="password" placeholder="Пароль">
 							</p>
 							<div class="popup-autorization">
-								<input type="submit" value="Войти" name="autorization">
+								<input class="button" type="submit" value="Войти" name="autorization">
 								<div>
 									<a href="#"> Забыли пароль? </a>
 									<a href="#"> Новая регистрация </a>
@@ -144,12 +145,12 @@
 				<div class="sel-raspberry">
 					<p> Малинка даром! </p>
 					<p> При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно. </p>
-					<a href="#" class="sel-button"> Хочу варенье! </a>
+					<a href="#" class="button sel-button"> Хочу варенье! </a>
 				</div>
 				<div class="sel-chocolate">
 					<p> Шоколадки даром! </p>
 					<p> При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно. </p>
-					<a href="#" class="sel-button"> Хочу шоколадки! </a>
+					<a href="#" class="button sel-button"> Хочу шоколадки! </a>
 				</div>
 			</div>
 			<div class="price container">
@@ -164,7 +165,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой </a>
 					</h2>
-					<a href="#" class="price-button"> Быстрый просмотр </a>
+					<a href="#" class="button price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -177,7 +178,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-кофейное с кусочками шоколада </a>
 					</h2>
-					<a href="#" class="price-button"> Быстрый просмотр </a>
+					<a href="#" class="button price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -190,7 +191,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочно-клубничное с присыпкой из белого шоколада </a>
 					</h2>
-					<a href="#" class="price-button"> Быстрый просмотр </a>
+					<a href="#" class="button price-button"> Быстрый просмотр </a>
 				</article>
 				<article class="price-item hit-item"> 
 					<a href="#">
@@ -203,7 +204,7 @@
 					<h2 class="price-heading">
 						<a href="#"> Сливочное крем-брюле с карамельной подливкой </a>
 					</h2>
-					<a href="#" class="price-button"> Быстрый просмотр </a>
+					<a href="#" class="button price-button"> Быстрый просмотр </a>
 				</article>
 			</div>
 			<div class="features-block container">
@@ -229,7 +230,7 @@
 						что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
 					<form action="https://echo.htmlacademy.ru" method="post">
 						<input type="email" name="e-mail" placeholder="Электронная почта"> 
-						<button> Отправить </button> 
+						<button class="button"> Отправить </button> 
 					</form>
 					</div>
 				</div>
@@ -240,7 +241,7 @@
 					<input type="text" name="name" placeholder="Как вас зовут?">
 					<input type="email" name="email" placeholder="Ваша почта для ответа?">
 					<textarea id="comment-field" name="comment" rows="5" cols="45" placeholder="Напишите что-нибудь..."></textarea> 
-					<input type="submit" name="feedback" value="Отправить">	
+					<input class="button" type="submit" name="feedback" value="Отправить">
 					<button class="map-close map-close2" type="button">Закрыть</button>
 				</form>	
 			</div>
