--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<input type="text" name="search" placeholder="Что ищем?">
 					</form>
 					<a class="login" href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g>
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/>
 						</svg>
 						Вход 
 					</a>
@@ -68,7 +68,7 @@
 						</form>
 					</section>
 					<a class="user-basket" href="#"> 
-						<svg class="svg-basket" xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/></g>
+						<svg class="svg-basket" xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20"><path d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"/><circle cx="6.984" cy="18" r="2"/><circle cx="15.984" cy="18" r="2"/>
 						</svg>
 						Пусто
 					</a>
@@ -81,7 +81,6 @@
 		</header>
 		<main>
 			<h1 class="visually-hidden"> Магазин мороженого «Глейси» </h1>
-			
 			<input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
 			<input class="visually-hidden" type="radio" id="product-2" name="toggle">
 			<input class="visually-hidden" type="radio" id="product-3" name="toggle">
@@ -117,30 +116,6 @@
 					</section>
 				</div>
 			</div>
-
-			<!-- <div class="sliders container"> -->
-			  <!-- <input type="radio" id="btn-1" name="toggle" checked> -->
-			  <!-- <input type="radio" id="btn-2" name="toggle"> -->
-			  <!-- <input type="radio" id="btn-3" name="toggle"> -->
-			  <!-- <div class="site-wrapper"> -->
-				<!-- <div class="content-wrapper"> -->
-				  <!-- <div class="slider"> -->
-					<!-- <div class="slide" id="slide1"> -->
-					  <!-- <div class="slide-title"> Крем-брюле и пломбир с малиновым джемом </div> -->
-					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
-					<!-- </div> -->
-					<!-- <div class="slide" id="slide2"> -->
-					  <!-- <div class="slide-title"> Шоколадный пломбир и лимонный сорбет </div> -->
-					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
-					<!-- </div> -->
-					<!-- <div class="slide" id="slide3"> -->
-					  <!-- <div class="slide-title"> Пломбир с помадкой и клубничный щербет </div> -->
-					  <!-- <a class="slide-btn" href="#"> Давайте оба! </a> -->
-					<!-- </div> -->
-				   <!-- </div> -->
-				<!-- </div> -->
-			  <!-- </div> -->
-			<!-- </div> -->
 			<div class="select container"> 
 				<div class="sel-raspberry">
 					<p> Малинка даром! </p>
