--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="icon.png">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
 	<header class="main-header container">
