последние правки.. защита3

--- a/catalog.html
+++ b/catalog.html
@@ -2,11 +2,13 @@
 <html lang="ru">
  <head>
 		<meta charset="utf-8">
-	 <title>«Глейси» - Каталог мороженого</title>
+		<title>«Глейси» - Каталог мороженого</title>
 		<link rel="shortcut icon" href="icon.png">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.min.css">
+<!--		<link rel="stylesheet" href="css/style.min.css">  -->
+				<link rel="stylesheet" href="css/style.css">
+
  </head>
  <body>
 		<header class="main-header container">
@@ -227,7 +229,7 @@
 				<a href="#">
 					<img src="img/coffee_ice.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"> 
 					<p class="price-goods"> 
-						380 <span>/кг</span>
+						380<span>/кг</span>
 					</p>
 				</a>
 				<h2 class="price-heading">
@@ -368,7 +370,8 @@
 				</ul>
 			</section>
 		</div>
-		<footer class="main-footer container footer-line">
+		<footer class="main-footer container">
+			<span class="footer-line"></span>
 			<div class="footer-social">
 				<ul class="reset-list">
 					<li>
