--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8">
 		<title>Магазин мороженого «Глейси» - Главная страница</title>
 		<link rel="shortcut icon" href="icon.png">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">		<link rel="stylesheet" href="css/normalize.css">
+<!--		<link rel="stylesheet" href="css/style.min.css">  -->
+				<link rel="stylesheet" href="css/style.css">
+
 	</head>
-	<body>
+	<body class="body-bg">
 		<header class="main-header container">
 			<div class="logo">
 				<img src="img/logo.svg" alt="GllacyShop" title="Магазин мороженого «Глейси»" width="154" height="64">
@@ -181,14 +182,16 @@
 					<a href="#" class="button price-button">Быстрый просмотр</a>
 				</article>
 			</div>
-			<div class="features-block container">
-				<p>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</p>
-				<ul class="features-list reset-list">
-					<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-					<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-					<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-					<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-				</ul>
+			<div class="container">
+				<div class="features-block container">
+					<p>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</p>
+					<ul class="features-list reset-list">
+						<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+						<li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+						<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+						<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+					</ul>
+				</div>
 			</div>
 			<div class="user-blog container">
 				<div class="blog">
