--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 		<title>Магазин мороженого «Глейси» - Главная страница</title>
 		<link rel="shortcut icon" href="icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">		<link rel="stylesheet" href="css/normalize.css">
-<!--		<link rel="stylesheet" href="css/style.min.css">  -->
-				<link rel="stylesheet" href="css/style.css">
-
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 	<body class="body-bg">
 		<header class="main-header container">
